--- a/results_cifake_S.cfg
+++ b/results_cifake_S.cfg
@@ -14,7 +14,7 @@ model:
 test:
   batch_size: 32
   limit_test_batches: 1.0
-  mixed_precision: true
+  mixed_precision: false
   resolution: 224
   seed: 5
   weights_path: /kaggle/input/weights-fstlies/cifake_S.ckpt
