--- a/results_cifake_S.cfg
+++ b/results_cifake_S.cfg
@@ -17,7 +17,7 @@ test:
   mixed_precision: false
   resolution: 224
   seed: 5
-  weights_path: /kaggle/input/weights-fstlies/cifake_S.ckpt
+  weights_path: /kaggle/input/weights-fstlies
 train:
   accumulation_batches: 4
   batch_size: 32
