--- a/results_cifake_S.cfg
+++ b/results_cifake_S.cfg
@@ -1,5 +1,5 @@
 dataset:
-  cifake_path: /kaggle/input/4moredataset/cifake
+  cifake_path: /kaggle/input/only-fake
   coco2014_path: ../../datasets/coco2014
   coco_fake_path: ../../datasets/fake_coco
   dffd_path: ../../datasets/dffd
